@@ -1,0 +1,7 @@
+# depslib dependency file v1.0
+1596639060 source:/home/mary/Documents/grad_prog/practice_programs/inkblot/main.c
+	<stdio.h>
+	<stdlib.h>
+	<string.h>
+	<ctype.h>
+
