@@ -1,3 +1,7 @@
+2020-08-05  Mary Bennett <mary.bennett@embecosm.com>
+
+	* inkblot/*: Added program that multiplies two numbers together
+
 2020-07-22  Mary Bennett <mary.bennett@embecosm.com>
 
 	* queen.c: Added attempt at stack
